--- a/res/xml/lighthouse_settings.xml
+++ b/res/xml/lighthouse_settings.xml
@@ -66,12 +66,12 @@
             android:fragment="com.lighthouse.settings.fragments.PowerMenuSettings"
             android:icon="@drawable/ic_settings_powermenu"/>
 
-        <!-- Recents -->
+        <!-- Recents 
         <Preference
             android:key="recents_category"
             android:title="@string/recents_title"
             android:fragment="com.lighthouse.settings.fragments.RecentsSettings"
-            android:icon="@drawable/ic_settings_recents"/>
+            android:icon="@drawable/ic_settings_recents"/>  -->
 
         <!-- Notifications -->
         <Preference
