--- a/res/xml/lighthouse_settings.xml
+++ b/res/xml/lighthouse_settings.xml
@@ -59,12 +59,12 @@
             android:fragment="com.lighthouse.settings.fragments.LockScreenSettings"
             android:icon="@drawable/ic_settings_lockscreens"/>
 
-        <!-- Power Menu -->
+        <!-- Power Menu 
         <Preference
             android:key="powermenu__category"
             android:title="@string/powermenu_title" 
             android:fragment="com.lighthouse.settings.fragments.PowerMenuSettings"
-            android:icon="@drawable/ic_settings_powermenu"/>
+            android:icon="@drawable/ic_settings_powermenu"/> -->
 
         <!-- Recents 
         <Preference
