--- a/res/xml/lighthouse_settings.xml
+++ b/res/xml/lighthouse_settings.xml
@@ -21,70 +21,70 @@
         <Preference
             android:key="statusbar_category"
             android:title="@string/statusbar_title"
-            android:fragment="com.lighthouse.settings.fragments.StatusBarSettings" 
+            android:fragment="com.lighthouse.supplies.fragments.StatusBarSettings" 
             android:icon="@drawable/ic_settings_statusbar"/>
 
         <!-- Quick Settings panel -->
         <Preference
             android:key="quicksettings_category"
             android:title="@string/quicksettings_title"
-            android:fragment="com.lighthouse.settings.fragments.QuickSettings"
+            android:fragment="com.lighthouse.supplies.fragments.QuickSettings"
             android:icon="@drawable/ic_settings_quicksettings"/>
 
         <!-- Buttons -->
         <Preference
             android:key="buttonsettings_category"
             android:title="@string/button_title"
-            android:fragment="com.lighthouse.settings.fragments.ButtonSettings"
+            android:fragment="com.lighthouse.supplies.fragments.ButtonSettings"
             android:icon="@drawable/ic_settings_buttons"/>
 
         <!-- Navigation Bar -->
         <Preference
             android:key="navigationbar_category"
             android:title="@string/navbar_title" 
-            android:fragment="com.lighthouse.settings.fragments.NavbarSettings"
+            android:fragment="com.lighthouse.supplies.fragments.NavbarSettings"
             android:icon="@drawable/ic_settings_navbar"/>
 
         <!-- Gestures -->
         <Preference
             android:key="gestures_category"
             android:title="@string/gestures_title" 
-            android:fragment="com.lighthouse.settings.fragments.GestureSettings"
+            android:fragment="com.lighthouse.supplies.fragments.GestureSettings"
             android:icon="@drawable/ic_settings_gesture"/>
 
         <!-- Lock Screen -->
         <Preference
             android:key="lockscreen_category"
             android:title="@string/lockscreen_title" 
-            android:fragment="com.lighthouse.settings.fragments.LockScreenSettings"
+            android:fragment="com.lighthouse.supplies.fragments.LockScreenSettings"
             android:icon="@drawable/ic_settings_lockscreens"/>
 
         <!-- Power Menu 
         <Preference
             android:key="powermenu__category"
             android:title="@string/powermenu_title" 
-            android:fragment="com.lighthouse.settings.fragments.PowerMenuSettings"
+            android:fragment="com.lighthouse.supplies.fragments.PowerMenuSettings"
             android:icon="@drawable/ic_settings_powermenu"/> -->
 
         <!-- Recents 
         <Preference
             android:key="recents_category"
             android:title="@string/recents_title"
-            android:fragment="com.lighthouse.settings.fragments.RecentsSettings"
+            android:fragment="com.lighthouse.supplies.fragments.RecentsSettings"
             android:icon="@drawable/ic_settings_recents"/>  -->
 
         <!-- Notifications -->
         <Preference
             android:key="notifications_category"
             android:title="@string/notifications_title"
-            android:fragment="com.lighthouse.settings.fragments.NotificationSettings"
+            android:fragment="com.lighthouse.supplies.fragments.NotificationSettings"
             android:icon="@drawable/ic_settings_notification"/>
 
         <!-- Misc -->
         <Preference
             android:key="misc_category"
             android:title="@string/misc_title" 
-            android:fragment="com.lighthouse.settings.fragments.MiscSettings"
+            android:fragment="com.lighthouse.supplies.fragments.MiscSettings"
             android:icon="@drawable/ic_settings_miscs"/>
 
 </PreferenceScreen>
